# akdemia

./: .easignore  .env  .env.example  .eslintrc.js  .gitignore  BACKEND_ANALYSIS.md  CHANGELOG.md  DEPLOY.md  Dockerfile  PRE-DEPLOY-CHECKLIST.md  README.md  app.json  babel.config.js  build-all.bat  build-all.sh  docker-compose.production.yml  eas.json  package-lock.json  package.json  tsconfig.json
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle
app/: capture.tsx  results.tsx  scan.tsx
back/: .env.example  .gitignore  Dockerfile  Dockerfile.gateway  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
back/docker/: docker-compose.yml
back/docs/: TECHNICAL_GUIDE.md
docker/: docker-compose.yml
docker/init-db/: 01-init.sql
docker/nginx/: nginx.conf
docs/: OMR_SYSTEM.md
front/: .dockerignore  .env.example  .env.production  .gitignore  Dockerfile  README.md  app.json  babel.config.js  eas.json  metro.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
omr-processor-service/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
omr-processor-service/app/: main.py
omr-processor-service/app/api/: __init__.py
omr-processor-service/app/api/endpoints/: health.py  processing.py
omr-processor-service/app/consumers/: processing_consumer.py
omr-processor-service/app/core/: __init__.py  constants.py
omr-processor-service/app/services/: image_utils.py  image_validator.py  omr_processor.py
src/: app.module.ts  main.ts
(+166 files in other folders)
